# tree-sitter

./: .gitignore  CLAUDE.md  Cargo.toml
crates/cli/src/: main.rs
crates/generate/: Cargo.toml
crates/generate/src/: generate.rs  render_rust.rs
crates/generate/tests/: rust_c_parity.rs
crates/runtime/: Cargo.toml  README.md
crates/runtime/src/: lib.rs
